results/SVCOMP/conversational/log-ExSymExeBool-2024_03_12_06_08_06.txt
class Main {

  //@ ensures \result == test(y, x);
  public static boolean f() {
    int x = 3;
    boolean y = true;
    Main inst = new Main();
    return inst.test(y, x);
  }

  /*
   * test IINC & IFLE bytecodes (Note: javac compiles ">" to IFLE)
   */
  //@ ensures \result == true <==> x && System.out.println("branch FOO1");
  //@ ensures \result == false <==> !x;
  public boolean test(boolean x, int z) {
    System.out.println("Testing ExSymExeBool");
    z++;
    if (x) System.out.println("branch FOO1");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:3: error: cannot find symbol
  //@ ensures \result == test(y, x);
                              ^
  symbol:   variable y
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:3: error: cannot find symbol
  //@ ensures \result == test(y, x);
                                 ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:14: error: 'void' type not allowed here
  //@ ensures \result == true <==> x && System.out.println("branch FOO1");
                                                          ^
3 errors

class Main {

  //@ ensures \result == test(true, 3);
  public static boolean f() {
    int x = 3;
    boolean y = true;
    Main inst = new Main();
    return inst.test(y, x);
  }

  /*
   * test IINC & IFLE bytecodes (Note: javac compiles ">" to IFLE)
   */
  //@ ensures \result == true <==> x && System.out.println("branch FOO1");
  //@ ensures \result == false <==> !x;
  public boolean test(boolean x, int z) {
    System.out.println("Testing ExSymExeBool");
    z++;
    if (x) System.out.println("branch FOO1");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:3: error: non-static method test(boolean,int) cannot be referenced from a static context
  //@ ensures \result == test(true, 3);
                         ^
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:14: error: 'void' type not allowed here
  //@ ensures \result == true <==> x && System.out.println("branch FOO1");
                                                          ^
2 errors

class Main {

  //@ ensures \result == true <==> x && System.out.println("branch FOO1");
  //@ ensures \result == false <==> !x;
  public static boolean f() {
    int x = 3;
    boolean y = true;
    Main inst = new Main();
    return inst.test(y, x);
  }

  /*
   * test IINC & IFLE bytecodes (Note: javac compiles ">" to IFLE)
   */
  //@ ensures \result == true <==> x && System.out.println("branch FOO1");
  //@ ensures \result == false <==> !x;
  public boolean test(boolean x, int z) {
    System.out.println("Testing ExSymExeBool");
    z++;
    if (x) System.out.println("branch FOO1");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:3: error: cannot find symbol
  //@ ensures \result == true <==> x && System.out.println("branch FOO1");
                                   ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:3: error: 'void' type not allowed here
  //@ ensures \result == true <==> x && System.out.println("branch FOO1");
                                                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:4: error: cannot find symbol
  //@ ensures \result == false <==> !x;
                                     ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:15: error: 'void' type not allowed here
  //@ ensures \result == true <==> x && System.out.println("branch FOO1");
                                                          ^
4 errors

class Main {

  //@ ensures \result == true <==> x && System.out.println("branch FOO1");
  //@ ensures \result == false <==> !x;
  public static boolean f() {
    int x = 3;
    boolean y = true;
    Main inst = new Main();
    return inst.test(y, x);
  }

  /*
   * test IINC & IFLE bytecodes (Note: javac compiles ">" to IFLE)
   */
  //@ ensures \result == true <==> x && System.out.println("branch FOO1");
  //@ ensures \result == false <==> !x;
  public boolean test(boolean x, int z) {
    System.out.println("Testing ExSymExeBool");
    z++;
    if (x) System.out.println("branch FOO1");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:3: error: cannot find symbol
  //@ ensures \result == true <==> x && System.out.println("branch FOO1");
                                   ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:3: error: 'void' type not allowed here
  //@ ensures \result == true <==> x && System.out.println("branch FOO1");
                                                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:4: error: cannot find symbol
  //@ ensures \result == false <==> !x;
                                     ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:15: error: 'void' type not allowed here
  //@ ensures \result == true <==> x && System.out.println("branch FOO1");
                                                          ^
4 errors

class Main {

  //@ ensures \result == true <==> System.out.println("branch FOO1");
  //@ ensures \result == false <==> true;
  public static boolean f() {
    int x = 3;
    boolean y = true;
    Main inst = new Main();
    return inst.test(y, x);
  }

  /*
   * test IINC & IFLE bytecodes (Note: javac compiles ">" to IFLE)
   */
  //@ ensures \result == true <==> System.out.println("branch FOO1");
  //@ ensures \result == false <==> true;
  public boolean test(boolean x, int z) {
    System.out.println("Testing ExSymExeBool");
    z++;
    if (x) System.out.println("branch FOO1");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:3: error: incompatible types: void cannot be converted to boolean
  //@ ensures \result == true <==> System.out.println("branch FOO1");
                                                     ^
/home/max/Documents/JMLGPT/tmp/ExSymExeBool.java:15: error: incompatible types: void cannot be converted to boolean
  //@ ensures \result == true <==> System.out.println("branch FOO1");
                                                     ^
2 errors

class Main {

  //@ ensures \result == true;
  //@ ensures \result == false;
  public static boolean f() {
    int x = 3;
    boolean y = true;
    Main inst = new Main();
    return inst.test(y, x);
  }

  /*
   * test IINC & IFLE bytecodes (Note: javac compiles ">" to IFLE)
   */
  //@ ensures \result == true;
  //@ ensures \result == false;
  public boolean test(boolean x, int z) {
    System.out.println("Testing ExSymExeBool");
    z++;
    if (x) System.out.println("branch FOO1");
    else {
      return false;
    }
    return true;
  }
}
